<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404651"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="79dp"
        android:onClick="GraficoFront"
        android:text="@string/FrontsCharts"
        app:iconGravity="textTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Alters"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <Button
        android:id="@+id/Alters"
        android:layout_width="280dp"
        android:layout_height="76dp"
        android:background="@drawable/edit_text_border"
        android:onClick="Alters"
        android:text="@string/Alters"
        android:textColorHighlight="#C81010"
        android:textColorLink="#D15858"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="279dp"
        android:layout_height="293dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/edit_text_border"
        android:onClick="Diary"
        android:text="@string/Diario"
        android:textColorHighlight="#C81010"
        android:textColorLink="#D15858"
        app:icon="@drawable/lapiz_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/UsuarioSaludo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="64dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="258dp"
        app:layout_constraintBottom_toTopOf="@+id/Button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cursed_emoji_png_hd_quality" />

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Fecha"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button2" />

</androidx.constraintlayout.widget.ConstraintLayout>