<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404651"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="652dp"
        android:layout_height="164dp"
        android:rotation="41"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        app:srcCompat="@drawable/linea" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="652dp"
        android:layout_height="164dp"
        android:rotation="21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.967"
        app:srcCompat="@drawable/linea" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="652dp"
        android:layout_height="164dp"
        android:rotation="-29"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514"
        app:srcCompat="@drawable/linea" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="276dp"
        android:layout_height="48dp"
        android:layout_marginTop="248dp"
        android:autoText="false"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:drawableTint="#FFFFFF"
        android:ems="10"
        android:foregroundTint="#FDF7F7"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSendToLogin"
        android:layout_width="177dp"
        android:layout_height="46dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="#272932"
        android:text="@string/YaTengoCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:rippleColor="#272932" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="177dp"
        android:layout_height="46dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#272932"
        android:text="@string/regustrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:rippleColor="#272932" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="276dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="276dp"
        android:layout_height="45dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="111dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/unknown__3_" />

</androidx.constraintlayout.widget.ConstraintLayout>