<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404651"
    android:backgroundTint="#404651"
    tools:context=".LoginPage">

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unknown__3_" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="163dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="78dp"
        android:rotation="-29"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView21"
        app:srcCompat="@drawable/linea" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="682dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:rotation="-41"
        android:rotationX="-12"
        android:rotationY="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:srcCompat="@drawable/linea"
        tools:layout_editor_absoluteX="-75dp" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="652dp"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="20dp"
        android:rotation="21"
        app:layout_constraintBottom_toTopOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/linea" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="168dp"
        android:layout_height="54dp"
        android:layout_marginBottom="82dp"
        android:backgroundTint="#272932"
        android:text="@string/Entrar"
        app:layout_constraintBottom_toTopOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:rippleColor="#272932" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="261dp"
        android:layout_height="48dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:textAlignment="center"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="652dp"
        android:layout_height="164dp"
        android:layout_marginStart="8dp"
        android:rotation="21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/linea" />
</androidx.constraintlayout.widget.ConstraintLayout>